[gd_scene load_steps=6 format=3 uid="uid://34ovackbb0xt"]

[ext_resource type="Script" path="res://Scripts/settings.gd" id="1_edmus"]
[ext_resource type="Texture2D" uid="uid://by5nnsktymsb6" path="res://Assets/GUI/Back/button.png" id="2_ej73e"]
[ext_resource type="Texture2D" uid="uid://chol4j55hl3wo" path="res://Assets/GUI/Back/pressed.png" id="3_niuor"]
[ext_resource type="Texture2D" uid="uid://ckkm2wypcxoa0" path="res://Assets/GUI/Back/hover.png" id="4_lf4li"]
[ext_resource type="FontFile" uid="uid://c2wsertwqrai5" path="res://Assets/GUI/Font/PixelatedEleganceRegular-ovyAA.ttf" id="5_4her4"]

[node name="settings" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_edmus")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="Volume" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[node name="Mute" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Mute"

[node name="Resolution" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
item_count = 6
popup/item_0/text = "3840 × 2160"
popup/item_1/text = "2560 × 1440"
popup/item_1/id = 1
popup/item_2/text = "1920x1080"
popup/item_2/id = 2
popup/item_3/text = "1600 × 900"
popup/item_3/id = 3
popup/item_4/text = "1366 × 768"
popup/item_4/id = 4
popup/item_5/text = "1280 × 720"
popup/item_5/id = 5

[node name="back" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 33.0
offset_top = 959.0
offset_right = 220.0
offset_bottom = 1042.0
texture_normal = ExtResource("2_ej73e")
texture_pressed = ExtResource("3_niuor")
texture_hover = ExtResource("4_lf4li")
stretch_mode = 0

[node name="Label" type="Label" parent="back"]
layout_mode = 0
offset_left = 27.0
offset_top = 9.0
offset_right = 163.0
offset_bottom = 60.0
theme_override_fonts/font = ExtResource("5_4her4")
theme_override_font_sizes/font_size = 25
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="value_changed" from="VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="VBoxContainer/Mute" to="." method="_on_mute_toggled"]
[connection signal="item_selected" from="VBoxContainer/Resolution" to="." method="_on_resolution_item_selected"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
